--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 />
                 <ul class="nav__links">
                     <li class="nav__item">
-                        <a class="nav__link" href="#section--1">Features</a>
+                        <a class="nav__link" href="#">Features</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" href="#section--2">Operations</a>
@@ -392,7 +392,7 @@
         </div>
         <div class="overlay hidden"></div>
 
-        <!-- <script src="script.js"></script> -->
-        <script src="3-typesOfEvents-evenHandlers.js"></script>
+        <script src="script.js"></script>
+        <!-- <script src="3-typesOfEvents-evenHandlers.js"></script> -->
     </body>
 </html>
