--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@
         </div>
         <div class="overlay hidden"></div>
 
-        <script src="script.js"></script>
+        <!-- <script src="script.js"></script> -->
+
         <!-- <script src="3-typesOfEvents-evenHandlers.js"></script> -->
+        <script src="5-dom-traversing.js"></script>
     </body>
 </html>
