--- a/index.html
+++ b/index.html
@@ -396,5 +396,6 @@
 
         <!-- <script src="3-typesOfEvents-evenHandlers.js"></script> -->
         <!-- <script src="5-dom-traversing.js"></script> -->
+        <!-- <script src="6-intersection0bserverApi.js"></script> -->
     </body>
 </html>
