dom-lifecycle events

--- a/index.html
+++ b/index.html
@@ -397,5 +397,6 @@
         <!-- <script src="3-typesOfEvents-evenHandlers.js"></script> -->
         <!-- <script src="5-dom-traversing.js"></script> -->
         <!-- <script src="6-intersection0bserverApi.js"></script> -->
+        <!-- <script src="7-dom-lifeCycle-events.js"></script> -->
     </body>
 </html>
